# ttt

./: .gitignore  .ruff.toml  404.html  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  sitemap.xml  style.css
.github/workflows/: build-and-deploy-docs.yml
api/: index.html
api/bits/: index.html
api/engine/: index.html
cli/: index.html
cli/draw/: index.html
cli/frame/: index.html
cli/list/: index.html
cli/watch/: index.html
cli/write/: index.html
docs/: about.md  art_credits.md  fonts.css  index.md  macros.py  patches.py  scripts.js  style.css
docs/api/: bits.md  engine.md  index.md
docs/cli/: commands.md  draw.md  frame.md  index.md  list.md  watch.md  write.md
docs/js/: title.js  toc.js
docs/overrides/macros/: toc.j2
docs/overrides/mkdocstrings/python/terminal/: attribute.html.jinja
docs/overrides/theme/: 404.html
docs/overrides/theme/css/: theme.css
docs/overrides/theme/macros/: toc.j2
docs/overrides/theme/partials/: footer.html
docs/ttt/: art-credits.md  how.md  install.md
js/: background.js
lorem/: index.html
search/: search_index.json
src/ext/: to_blocks.c
src/ttt/: __main__.py  blit.py  blocks.py
src/ttt/cli/: __init__.py  banner.py  blit.py  draw.py  frame.py  list.py  ttt.py  util.py  watch.py  write.py
src/ttt/core/: atlas.py  banner.py  blit.py  blocks.py  colors.py  convert.py  convert.pyx  effects.py  engine.py  font.py  image.py  io.py  term.py  text.py  time.py  types.py  video.py
src/ttt/core/bits/: __init__.py  atlas.py  banner.py  column.py  effect.py  frame.py  grid.py  image.py  outline.py  row.py  text.py  util.py
src/ttt/core/renderables/: __init__.py  atlas.py  banner.py  blank.py  frame.py  image.py  outline.py  text.py
src/ttt/resources/: __init__.py  credits.py
src/ttt/resources/bitmaps/: __init__.py  decode.py  frames.json  frames.py  icons.json  icons.py  patterns.json  patterns.py  util.py
src/ttt/resources/fonts/: __init__.py  arkpixel.json  arkpixel.txt  avenuepixel.json  fonts.py  gumballthickwires.json  herospeak.json  herospeak.txt  kiwisoda.json  m3x6.json  m3x6.txt  monogram-italic.json  monogram.json  notjamblackletter.json  pixelae.json  silver.json  silver.txt  vhsgothic.json  vonwaonbitmap.json
src/ttt/resources/patterns/: patterns.json  patterns.py
tools/: bitmap_names.json  font_languages.py  package_bitmaps.py  package_patterns.py  vs_code.py
tools/subset/: requirements.sh  subset.sh
ttt/art-credits/: index.html
ttt/how/: index.html
ttt/install/: index.html
ttt/showcase/: index.html
(+2 files in other folders)
