[project]
name = "ttt"
version = "0.1.0"
description = "Pixel toys for playing around in the terminal"
authors = [
    {name = "Hamza Haiken",email = "tenchi@team2xh.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]
packages = [
    { include = "ttt", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ttt = "ttt.__main__:ttt"
