[project]
name = "ttt"
version = "0.1.0"
description = "Pixel toys for playing around in the terminal"
authors = [
    {name = "Hamza Haiken",email = "tenchi@team2xh.net"}
]
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "ttt", from = "src" }
]
include = [
    { path = "src/ttt/**/*.pyx", format = "sdist" },
    { path = "build.py", format = "sdist" }
]

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools", "numpy", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ttt = "ttt.__main__:ttt"

[tool.poetry.group.dev.dependencies]
fonttools = "^4.55.4"
mkdocs = "^1.6.1"
mkdocs-terminal = "^4.7.0"
mkdocs-macros-plugin = "^1.3.7"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
ruff = "^0.9.4"
mkdocs-click = "^0.8.1"

